# EdgesCGALWeightedDelaunay3D

./: CMakeLists.txt  README.md  run_orderk.py
data/: example.xyzw
notebooks/: EdgesCGALWeightedDelaunay3D_Colab.ipynb
src/: EdgesCGALWeightedDelaunay3D.cpp
src/CGAL_OrderK/: kernels.hpp  main.cpp  npy.hpp
